test/compile_errors/err_opaque_by_value_param.w
//! expect-check-fail: opaque types cannot be passed by value; use a pointer or reference

type FILE = opaque

fn consume(file: FILE):
    let _ = file
